--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -37,7 +37,7 @@
                         <div class="row">
                           <div class="col-3">
                             <img
-                              src="images/dashboard/home_1.jpg"
+                              src="/images/dashboard/home_1.jpg"
                               alt="thumb"
                               class="img-fluid"
                             />
@@ -58,7 +58,7 @@
                         <div class="row">
                           <div class="col-3">
                             <img
-                              src="images/dashboard/home_2.jpg"
+                              src="/images/dashboard/home_2.jpg"
                               alt="thumb"
                               class="img-fluid"
                             />
@@ -79,7 +79,7 @@
                         <div class="row">
                           <div class="col-3">
                             <img
-                              src="images/dashboard/home_3.jpg"
+                              src="/images/dashboard/home_3.jpg"
                               alt="thumb"
                               class="img-fluid"
                             />
