--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,7 +4,7 @@
               <div class="d-flex justify-content-between align-items-center">
               <div class="navbar-top-left-menu">
                 <a class="navbar-brand" href="#"
-                      ><img src="images/logo.png" alt="logo"
+                      ><img src="/images/logo.png" alt="logo"
                     /></a>
               </div>
              <div class="navbar-top-right-menu">
