--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -6,13 +6,13 @@
                  <p class="mb-0" onclick="window.location.href = '/news?category=flahsnews&id=F061120221'">
      <!-- <marquee >
 <p>In a gruesome incident a minor boy has killed  4 of his family members in Dhalai district, Tripura</p>
-       
+       {{dateFormat now "dddd, MMM Do YYYY"}} 
         </marquee>-->
     </p>
                
               </div>
               <div class="d-flex">
-                <span class="text-danger me-2">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>               
+                <span class="text-danger me-2">Saturday Nov 5th 2022 </span>               
                 <span class="text-danger">32°C,Agartala</span>
               </div>
             </div>
