--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -12,7 +12,7 @@
                
               </div>
               <div class="d-flex">
-                <span class="text-danger me-2">Nov 14th 2022 </span>               
+                 <span class="text-danger me-2">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>                            
                 <span class="text-danger">32°C,Agartala</span>
               </div>
             </div>
